# irondash

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  cargokit  melos.yaml  pubspec.yaml  update_cargokit.sh
.github/workflows/: check_and_lint.yml  precompile_binaries  precompile_binaries.yml
dart_ffi/: Cargo.toml
dart_ffi/src/: functions.rs  value.rs
engine_context/: README.md
engine_context/dart/: CHANGELOG.md  README.md  cargokit  pubspec.yaml
engine_context/dart/android/: build.gradle  settings.gradle
engine_context/dart/android/rust/: Cargo.toml  cargokit.yaml  cargokit_options.yaml
engine_context/dart/android/rust/src/: jni_sys.rs  lib.rs
engine_context/dart/android/src/main/: AndroidManifest.xml
engine_context/dart/ios/: ironbird_engine_context.podspec  irondash_engine_context.podspec
engine_context/dart/ios/Classes/: EngineContextPlugin.h  EngineContextPlugin.m
engine_context/dart/lib/: ironbird_engine_context.dart  irondash_engine_context.dart
engine_context/dart/linux/: CMakeLists.txt  ironbird_engine_context_plugin.cc  irondash_engine_context_plugin.cc
engine_context/dart/linux/include/ironbird_engine_context/: ironbird_engine_context_plugin.h
engine_context/dart/linux/include/irondash_engine_context/: irondash_engine_context_plugin.h
engine_context/dart/macos/: ironbird_engine_context.podspec  irondash_engine_context.podspec
engine_context/dart/macos/Classes/: EngineContextPlugin.h  EngineContextPlugin.m
engine_context/dart/windows/: CMakeLists.txt  ironbird_engine_context_plugin.cpp  ironbird_engine_context_plugin.h  ironbird_engine_context_plugin_c_api.cpp  irondash_engine_context_plugin.cpp  irondash_engine_context_plugin.h  irondash_engine_context_plugin_c_api.cpp
engine_context/dart/windows/include/ironbird_engine_context/: ironbird_engine_context_plugin_c_api.h
engine_context/dart/windows/include/irondash_engine_context/: irondash_engine_context_plugin_c_api.h
engine_context/rust/: Cargo.toml
engine_context/rust/src/: android.rs  darwin.rs  error.rs  lib.rs  linux.rs  windows.rs
engine_context/rust/src/android/: mod.rs
engine_context/rust/src/platform/: mod.rs
engine_context/rust/src/platform/android/: jni_context.rs  mini_run_loop.rs  mod.rs  notifier.rs  sys.rs
engine_context/rust/src/platform/darwin/: mod.rs  sys.rs
engine_context/rust/src/platform/linux/: mod.rs  sys.rs
engine_context/rust/src/platform/win32/: mod.rs
jni_context/: Cargo.toml  README.md
jni_context/src/: lib.rs
jni_context/src/android/: mini_run_loop.rs  mod.rs  sys.rs
message_channel/: README.md
message_channel/dart/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
message_channel/dart/example/: cargokit  pubspec.yaml
message_channel/dart/example/android/app/: build.gradle
message_channel/dart/example/ios/: Podfile
message_channel/dart/example/ios/Runner.xcodeproj/: project.pbxproj
message_channel/dart/example/lib/: main.dart
message_channel/dart/example/linux/: CMakeLists.txt
message_channel/dart/example/linux/flutter/: generated_plugins.cmake
message_channel/dart/example/macos/: Podfile
message_channel/dart/example/macos/Runner.xcodeproj/: project.pbxproj
message_channel/dart/example/rust/: Cargo.toml  dummy.c  example_rust.podspec
message_channel/dart/example/rust/src/: addition.rs  http_client.rs  lib.rs  slow.rs
message_channel/dart/example/windows/flutter/: generated_plugin_registrant.cc
message_channel/dart/example/windows/runner/: CMakeLists.txt
message_channel/dart/lib/: ironbird_message_channel.dart
message_channel/dart/lib/src/: codec.dart  event_channel.dart  message_channel.dart  method_channel.dart  mock_message_channel_context.dart  native_functions.dart  native_message_channel_context.dart
message_channel/dart/test/: message_channel_test.dart
message_channel/rust/: Cargo.toml
message_channel/rust/src/: async_method_handler.rs  codec.rs  event_channel.rs  finalizable_handle.rs  late.rs  lib.rs  message_channel.rs  message_channel_inner.rs  message_transport.rs  method_handler.rs  native_vector.rs  transport.rs  value.rs  value_darwin.rs
message_channel/rust/src/derive_internal/: mod.rs
message_channel/rust/tests/: derive.rs
message_channel/rust_derive/: Cargo.toml
message_channel/rust_derive/src/: attributes.rs  case.rs  from.rs  lib.rs  try_into.rs
run_loop/: Cargo.toml  README.md
run_loop/src/: lib.rs  main_thread.rs  run_loop.rs  run_loop_sender.rs  task.rs  thread_id.rs
run_loop/src/platform/: mod.rs
run_loop/src/platform/android/: mod.rs  sys.rs
run_loop/src/platform/darwin/: mod.rs  sys.rs
run_loop/src/platform/linux/: mod.rs  sys.rs
run_loop/src/platform/win32/: adapter.rs  mod.rs  sys.rs
run_loop/src/tests/: sender_for_main_thread.rs
run_loop/src/util/: blocking_variable.rs  capsule.rs  mod.rs
texture/: Cargo.toml  README.md
texture/example/: .metadata  pubspec.yaml
texture/example/android/app/: build.gradle
texture/example/android/app/src/main/kotlin/com/example/example/: MainActivity.kt
texture/example/ios/: Podfile
texture/example/ios/Runner.xcodeproj/: project.pbxproj
texture/example/lib/: main.dart
texture/example/linux/: CMakeLists.txt
texture/example/linux/flutter/: generated_plugin_registrant.cc
texture/example/macos/: Podfile
texture/example/macos/Flutter/: GeneratedPluginRegistrant.swift
texture/example/macos/Runner.xcodeproj/: project.pbxproj
texture/example/rust/: Cargo.toml  texture_example.podspec
texture/example/rust/src/: lib.rs
texture/example/test/: widget_test.dart
texture/example/windows/flutter/: generated_plugins.cmake
texture/example/windows/runner/: CMakeLists.txt  flutter_window.cpp
texture/src/: error.rs  lib.rs  log.rs
texture/src/platform/: mod.rs
texture/src/platform/android/: mod.rs
texture/src/platform/darwin/: io_surface.rs  mod.rs
texture/src/platform/linux/: g_object_wrapper.rs  gl_texture.rs  mod.rs  pixel_buffer_texture.rs  sys.rs
texture/src/platform/win32/: alternative_api.rs  mod.rs  sys.rs
(+5 files in other folders)
