[workspace]

members = [
    "dart_ffi",
    "engine_context/rust",
    # "engine_context/dart/android/rust",
    "message_channel/dart/example/rust",
    "message_channel/rust_derive",
    "message_channel/rust",
    "run_loop",
    "texture",
    "texture/example/rust",
]

resolver = "2"

[profile.release]
lto = true
panic = "abort"

[patch.crates-io]
irondash_dart_ffi = { path = "dart_ffi" }
irondash_engine_context = { path = "engine_context/rust" }
irondash_message_channel = { path = "message_channel/rust" }
irondash_run_loop = { path = "run_loop" }
irondash_texture = { path = "texture" }
