[package]
name = "irondash_dart_ffi"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Rust Bindings for Dart FFI API."
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
repository = "https://github.com/irondash/irondash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
