[package]
name = "irondash_jni_context"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Access to JavaVM for Flutter JNI libraries."
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
repository = "https://github.com/irondash/irondash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
once_cell = "1.16.0"
