[package]
name = "irondash_run_loop"
version = "0.4.0-dev.2"
edition = "2021"
license = "MIT"
description = "Consistent, platform-independent interface to system run loop."
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
repository = "https://github.com/irondash/irondash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.17", default-features = false, features = ["std"] }
irondash_engine_context = { version = "0.4.0-dev.2" }
once_cell = "1.16.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"
objc2 = "0.4.1"
icrate = { version = "0.0.4", features = ["Foundation", "Foundation_NSString"] }

[target.'cfg(target_os = "macos")'.dependencies]
icrate = { version = "0.0.4", features = [
    "AppKit",
    "AppKit_NSEvent",
    "AppKit_NSApplication",
    "AppKit_NSGraphicsContext",
] }

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
