[package]
name = "irondash_run_loop"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Consistent, platform-independent interface to system run loop."
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
repository = "https://github.com/irondash/irondash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.17", default-features = false, features = ["std"] }
irondash_engine_context = { version = "0.5.0" }
once_cell = "1.16.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"
objc2 = "0.5.0"
objc2-foundation = { version = "0.2.2", features = [
    "NSString",
    "NSThread",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.2.2", features = [
    "NSEvent",
    "NSResponder",
    "NSApplication",
    "NSGraphicsContext",
] }

[target.'cfg(target_os = "android")'.dependencies]
log = "0.4"
