[package]
name = "irondash_texture"
version = "0.1.0"
edition = "2021"
description = "Rust Bindings for Flutter External Textures."
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
repository = "https://github.com/irondash/irondash"
exclude = ["example/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
irondash_engine_context = { version = "0.1.0" }
irondash_jni_context = { version = "0.1.0" }
