[package]
name = "irondash_texture"
version = "0.5.0"
edition = "2021"
description = "Rust Bindings for Flutter External Textures."
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
repository = "https://github.com/irondash/irondash"
license = "MIT"
exclude = ["example/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
irondash_engine_context = { version = "0.5.0" }
irondash_run_loop = { version = "0.6.0" }
log = "0.4"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-sys = "0.4.1"

[target.'cfg(target_os = "windows")'.dependencies]
cstr = "0.2.11"
once_cell = "1.16.0"

[target.'cfg(target_os = "linux")'.dependencies]
glib-sys = "0.16.3"
gobject-sys = "0.16.3"
cstr = "0.2.11"
once_cell = "1.16.0"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.5.0"
icrate = { version = "0.1.0", features = ["Foundation"] }
core-foundation = "0.9"
once_cell = "1.16.0"
