[package]
name = "irondash_engine_context"
version = "0.6.0"
edition = "2021"
license = "MIT"
description = "Easy access to FlutterView, FlutterBinaryMessenger and FlutterTextureRegistry for FFI."
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
repository = "https://github.com/irondash/irondash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
android_logger = "0.11"
log = "0.4"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2 = "0.5.0"
objc2-foundation = { version = "0.2.2", features = [ ] }
core-foundation = "0.9"
