[package]
name = "ironbird_message_channel"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Rust interface to ironbird MessageChannel."
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
repository = "https://github.com/nativeshell/ironbird"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
ironbird_dart_ffi = "0.1.0"
ironbird_run_loop = "0.1.0"
ironbird_message_channel_derive = { version = "0.1.1", path = "../rust_derive", optional = true }

[features]
derive = ["ironbird_message_channel_derive"]
# Allows mocking MessageChannel in unit tests
mock = []
