[package]
name = "irondash_message_channel"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Rust interface to irondash MessageChannel."
authors = ["Matej Knopp <matej.knopp@gmail.com>"]
repository = "https://github.com/irondash/irondash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.16.0"
log = "0.4"
irondash_dart_ffi = { version = "0.2.0" }
irondash_run_loop = { version = "0.6.0" }
async-trait = "0.1"
irondash_message_channel_derive = { version = "0.1.1", path = "../rust_derive", optional = true }

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
core-foundation = "0.9"
objc2 = "0.5.0"
objc2-foundation = { version = "0.2.2", features = [
    "NSString",
    "NSNull",
    "NSDictionary",
    "NSArray",
    "NSData",
    "NSValue",
    "NSEnumerator",
    "NSObject",
] }


[features]
derive = ["irondash_message_channel_derive"]
# Allows mocking MessageChannel in unit tests
mock = []
