[package]
name = "texture_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irondash_engine_context = { version = "0.1.1" }
irondash_texture = { version = "0.1.0" }
irondash_run_loop = { version = "0.1.0" }
simple_logger = "2.1"
log = "0.4"
fastrand = "1.8"

[target.'cfg(target_os = "android")'.dependencies]
irondash_jni_context = { version = "0.1.1" }
jni = "0.19"
android_logger = "0.11"
ndk-sys = "0.4.0"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"
