[package]
name = "texture_example"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
irondash_texture = { version = "0.5.0" }
irondash_run_loop = { version = "0.6.0" }
irondash_dart_ffi = "0.2.0"
simple_logger = "2.1"
log = "0.4"
fastrand = "1.8"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
android_logger = "0.11"
ndk-sys = "0.4.1"

[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"
